--- a/EVETool/Resources.en.resx
+++ b/EVETool/Resources.en.resx
@@ -117,17 +117,109 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="ResourceTier.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
+    <value>Top</value>
+  </data>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="ResourceTier.Location" type="System.Drawing.Point, System.Drawing">
+    <value>144, 29</value>
+  </data>
+  <data name="TierLabel.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
+    <value>Top, Bottom</value>
+  </data>
+  <data name="TierLabel.Location" type="System.Drawing.Point, System.Drawing">
+    <value>24, 32</value>
+  </data>
+  <data name="DesiredProduct.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
+    <value>Top, Bottom</value>
+  </data>
+  <data name="DesiredProduct.Location" type="System.Drawing.Point, System.Drawing">
+    <value>144, 57</value>
+  </data>
   <assembly alias="mscorlib" name="mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
   <data name="DesiredProduct.TabIndex" type="System.Int32, mscorlib">
     <value>1</value>
   </data>
+  <data name="DesiredLabel.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
+    <value>Top, Bottom</value>
+  </data>
+  <data name="DesiredLabel.Location" type="System.Drawing.Point, System.Drawing">
+    <value>24, 60</value>
+  </data>
+  <data name="ResultsPanel.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
+    <value>Top, Bottom, Left, Right</value>
+  </data>
+  <data name="ResultsPanel.AutoScroll" type="System.Boolean, mscorlib">
+    <value>False</value>
+  </data>
+  <data name="ResultsPanel.AutoSize" type="System.Boolean, mscorlib">
+    <value>True</value>
+  </data>
+  <data name="ResultsPanel.Location" type="System.Drawing.Point, System.Drawing">
+    <value>3, 119</value>
+  </data>
+  <data name="ResultsPanel.Size" type="System.Drawing.Size, System.Drawing">
+    <value>844, 217</value>
+  </data>
+  <data name="CalculateUsing.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
+    <value>Top, Bottom</value>
+  </data>
+  <data name="CalculateUsing.Items1" xml:space="preserve">
+    <value>Maximum Volume</value>
+  </data>
+  <data name="CalculateUsing.Location" type="System.Drawing.Point, System.Drawing">
+    <value>406, 45</value>
+  </data>
   <data name="CalculateUsing.TabIndex" type="System.Int32, mscorlib">
     <value>2</value>
+  </data>
+  <data name="CalculateUsingLabel.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
+    <value>Top, Bottom</value>
+  </data>
+  <data name="CalculateUsingLabel.Location" type="System.Drawing.Point, System.Drawing">
+    <value>309, 48</value>
+  </data>
+  <data name="label1.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
+    <value>Top, Bottom</value>
+  </data>
+  <data name="label1.Location" type="System.Drawing.Point, System.Drawing">
+    <value>534, 48</value>
+  </data>
+  <data name="Value.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
+    <value>Top, Bottom</value>
+  </data>
+  <data name="Value.Location" type="System.Drawing.Point, System.Drawing">
+    <value>562, 45</value>
   </data>
   <data name="Value.TabIndex" type="System.Int32, mscorlib">
     <value>3</value>
   </data>
+  <data name="MassLabel.Location" type="System.Drawing.Point, System.Drawing">
+    <value>678, 48</value>
+  </data>
+  <data name="QuantityUnits.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
+    <value>Top, Bottom</value>
+  </data>
+  <data name="QuantityUnits.Location" type="System.Drawing.Point, System.Drawing">
+    <value>679, 48</value>
+  </data>
+  <data name="BuildResult.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
+    <value>Top</value>
+  </data>
+  <data name="BuildResult.Location" type="System.Drawing.Point, System.Drawing">
+    <value>767, 24</value>
+  </data>
   <data name="BuildResult.TabIndex" type="System.Int32, mscorlib">
     <value>5</value>
+  </data>
+  <data name="$this.AutoSize" type="System.Boolean, mscorlib">
+    <value>True</value>
+  </data>
+  <data name="$this.AutoSizeMode" type="System.Windows.Forms.AutoSizeMode, System.Windows.Forms">
+    <value>GrowAndShrink</value>
+  </data>
+  <data name="$this.Size" type="System.Drawing.Size, System.Drawing">
+    <value>850, 339</value>
   </data>
 </root>
