--- a/EVETool/ResourcePanel.resx
+++ b/EVETool/ResourcePanel.resx
@@ -117,6 +117,10 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="ResourceTier.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
+    <value>Top</value>
+  </data>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="ResourceTier.Location" type="System.Drawing.Point, System.Drawing">
     <value>143, 24</value>
@@ -139,6 +143,9 @@
   </data>
   <data name="&gt;&gt;ResourceTier.ZOrder" xml:space="preserve">
     <value>11</value>
+  </data>
+  <data name="TierLabel.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
+    <value>Top</value>
   </data>
   <data name="TierLabel.AutoSize" type="System.Boolean, mscorlib">
     <value>True</value>
@@ -173,6 +180,9 @@
   <data name="&gt;&gt;TierLabel.ZOrder" xml:space="preserve">
     <value>10</value>
   </data>
+  <data name="DesiredProduct.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
+    <value>Top</value>
+  </data>
   <data name="DesiredProduct.Location" type="System.Drawing.Point, System.Drawing">
     <value>143, 52</value>
   </data>
@@ -196,6 +206,9 @@
   </data>
   <data name="&gt;&gt;DesiredProduct.ZOrder" xml:space="preserve">
     <value>9</value>
+  </data>
+  <data name="DesiredLabel.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
+    <value>Top</value>
   </data>
   <data name="DesiredLabel.AutoSize" type="System.Boolean, mscorlib">
     <value>True</value>
@@ -239,7 +252,6 @@
   <data name="ResultsPanel.AutoSize" type="System.Boolean, mscorlib">
     <value>True</value>
   </data>
-  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
   <data name="ResultsPanel.AutoSizeMode" type="System.Windows.Forms.AutoSizeMode, System.Windows.Forms">
     <value>GrowAndShrink</value>
   </data>
@@ -263,6 +275,9 @@
   </data>
   <data name="&gt;&gt;ResultsPanel.ZOrder" xml:space="preserve">
     <value>7</value>
+  </data>
+  <data name="CalculateUsing.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
+    <value>Top</value>
   </data>
   <data name="CalculateUsing.Items" xml:space="preserve">
     <value>Quantity</value>
@@ -293,6 +308,9 @@
   </data>
   <data name="&gt;&gt;CalculateUsing.ZOrder" xml:space="preserve">
     <value>5</value>
+  </data>
+  <data name="CalculateUsingLabel.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
+    <value>Top</value>
   </data>
   <data name="CalculateUsingLabel.AutoSize" type="System.Boolean, mscorlib">
     <value>True</value>
@@ -327,6 +345,9 @@
   <data name="&gt;&gt;CalculateUsingLabel.ZOrder" xml:space="preserve">
     <value>4</value>
   </data>
+  <data name="label1.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
+    <value>Top</value>
+  </data>
   <data name="label1.AutoSize" type="System.Boolean, mscorlib">
     <value>True</value>
   </data>
@@ -360,6 +381,9 @@
   <data name="&gt;&gt;label1.ZOrder" xml:space="preserve">
     <value>3</value>
   </data>
+  <data name="Value.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
+    <value>Top</value>
+  </data>
   <data name="Value.Location" type="System.Drawing.Point, System.Drawing">
     <value>561, 40</value>
   </data>
@@ -386,6 +410,9 @@
   </data>
   <data name="&gt;&gt;Value.ZOrder" xml:space="preserve">
     <value>2</value>
+  </data>
+  <data name="MassLabel.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
+    <value>Top</value>
   </data>
   <data name="MassLabel.AutoSize" type="System.Boolean, mscorlib">
     <value>True</value>
@@ -419,6 +446,9 @@
   </data>
   <data name="&gt;&gt;MassLabel.ZOrder" xml:space="preserve">
     <value>1</value>
+  </data>
+  <data name="QuantityUnits.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
+    <value>Top</value>
   </data>
   <data name="QuantityUnits.AutoSize" type="System.Boolean, mscorlib">
     <value>True</value>
@@ -508,7 +538,7 @@
     <value>854, 342</value>
   </data>
   <data name="&gt;&gt;$this.Name" xml:space="preserve">
-    <value>Resources</value>
+    <value>ResourcePanel</value>
   </data>
   <data name="&gt;&gt;$this.Type" xml:space="preserve">
     <value>System.Windows.Forms.UserControl, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
