--- a/EVETool/ResourcePanel.resx
+++ b/EVETool/ResourcePanel.resx
@@ -534,6 +534,9 @@
   <data name="$this.AutoScaleDimensions" type="System.Drawing.SizeF, System.Drawing">
     <value>6, 13</value>
   </data>
+  <data name="$this.AutoScroll" type="System.Boolean, mscorlib">
+    <value>True</value>
+  </data>
   <data name="$this.Size" type="System.Drawing.Size, System.Drawing">
     <value>854, 342</value>
   </data>
