--- a/EVETool/Properties/Resources.resx
+++ b/EVETool/Properties/Resources.resx
@@ -397,4 +397,7 @@
   <data name="Organic_Mortar_Applicators" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\resources\organic mortar applicators.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="Wetware_Mainframe" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Wetware Mainframe.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
